# alpha

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src-tauri/: tauri.conf.json
docs/: architecture.md
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/data-engine/: Cargo.toml
services/data-engine/src/: main.rs
services/real-time-feed/: Cargo.toml
services/real-time-feed/src/: main.rs
tools/build-tools/: Cargo.toml
tools/build-tools/src/: main.rs
wasm-analyzer/: Cargo.toml
wasm-analyzer/src/: lib.rs
