[package]
name = "alpha-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri 框架
tauri = { workspace = true, features = ["api-all"] }

# 异步运行时
tokio = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 配置管理
config = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 错误处理
anyhow = { workspace = true }

# 时间处理
chrono = { workspace = true }

# 内部包
alpha-core = { workspace = true }
alpha-storage = { workspace = true }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 文件系统
dirs = "5.0"

[[bin]]
name = "alpha-desktop"
path = "src/main.rs"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]