[package]
name = "alpha-wasm-analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM 绑定
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }

# 控制台错误处理
console_error_panic_hook = { workspace = true }

# 异步运行时
async-trait = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# 时间处理
chrono = { workspace = true }

# 内部包
alpha-core = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Storage",
  "Location",
  "Navigator",
  "History",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-simd"]