[package]
name = "alpha-api-gateway"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Web 框架
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# 异步运行时
tokio = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 配置管理
config = { workspace = true }
clap = { workspace = true }

# 日志和追踪
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# JWT 认证
jsonwebtoken = "9.2"

# UUID
uuid = { workspace = true }

# 内部包
alpha-core = { workspace = true }
alpha-protocols = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }